<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="avatar_url">app_upload/applications/games/avatars/api/generator/?id=</string>
    <string name="clearIcon">&#xE14C;</string>
    <string name="shareIcon">&#xE80D;</string>
    <string name="helpDarkIcon">&#xE887;</string>
    <string name="ejectIcon">&#xE8AC;</string>
    <string name="loginIcon">&#xE879;</string>
    <string name="refreshIcon">&#xE5D5;</string>
    <string name="starIcon">&#xE838;</string>
    <string name="starBorderIcon">&#xe83a;</string>
    <string name="starHalfIcon">&#xe839;</string>
    <string name="backIcon">&#xE5C8;</string>
    <string name="addIcon">&#xe145;</string>
    <string name="menuIcon">&#xe5d2;</string>
    <string name="lockIcon">&#xe897;</string>
    <string name="arrowDownIcon">&#xe5db;</string>
    <string name="arrowUpIcon">&#xe5d8;</string>
    <string name="bulbIcon">&#xe42e;</string>
    <string name="buyIcon">&#xe8cb;</string>
    <string name="editIcon">&#xE254;</string>
    <string name="cupIcon">&#xe905;</string>
    <string name="errorIcon">&#xe000;</string>
    <string name="tickIcon">&#xe5ca;</string>
    <string name="playIcon">&#xe037;</string>
    <string name="awesome_5">فوق العاده!</string>
    <string name="awesome_4">عالی بود!</string>
    <string name="awesome_3">کارت درسته!</string>
    <string name="awesome_2">آفرین!</string>
    <string name="awesome_1">ایول!</string>
    <string name="until_card_end">فقط %1$s سوال دیگر تا آخر این مرحله مونده!</string>
    <string name="level_exam">امتحان پایان %1$s</string>
    <string name="grew_up">دیگه بزرگ شدی و الان %1$s هستی!</string>
    <string name="grew_up_secret">یه مرحله مخفی جدید برات باز شده!</string>
    <string name="next_level">مرحله بعدی</string>
    <string name="next_question">سوال بعدی</string>
    <string name="guide">راهنما</string>
    <string name="exam">امتحان</string>
    <string name="show_solution">نمایش راهنما</string>
    <string name="show_me">نشونم بده!</string>
    <string name="hint_desc">برای نشون دادن راه حل این سوال باید یکی از چراغ های روشنت رو بدی!</string>
    <string name="buy_bulb">خرید چراغ روشن</string>
    <string name="level_leader_board">جدول رده بندی</string>
    <string name="speed_leader_board">جدول رده بندی سرعتی</string>
    <string name="no_leader_board">رده بندی برای نمایش یافت نشد</string>
    <string name="start_game">شروع بازی</string>
    <string name="rank_1">۱</string>
    <string name="rank_2">۲</string>
    <string name="rank_3">۳</string>
    <string name="buy_bulb_desc">با چراغ روشن می تونی راهنمایی حل سوال های مرحله رو ببینی. برای خرید چراغ روشن از اینجا اقدام کن:</string>
    <string name="go_buy">بریم بخریم!</string>
    <string name="refresh">دوباره سعی کن</string>
    <string name="no_negative">نمی توانید عدد منفی بسازید</string>
    <string name="no_divide">عدد کوچکتر از ۱ نمی توانید بسازید</string>
    <string name="no_move">حرکت دیگری نداری، دوباره شروع کن</string>
    <string name="read">خواندم</string>
    <string name="light_bulb">روشن</string>
    <string name="failed_1">سری بعد می تونی!</string>
    <string name="failed_2">دوباره تلاش کن!</string>
    <string name="failed_3">دفعه بعدی می بری!</string>
    <string name="failed_4">بازم سعی کن!</string>
    <string name="fail_desc">اینبار نتونستی این مسئله رو حل کنی. ولی اشکال نداره، دوباره سعی کن. این سری حتما حلش می کنی!</string>
    <string name="login_prompt">ورود به برنامه</string>
    <string name="login_prompt_desc">اگر می خوای رکورد تو هم توی جدول رده بندی نشون داده بشه، وارد اکانت کاربری خودت شو.</string>
    <string name="login_prompt_home_desc">با ورود به برنامه میتونی همیشه رکورد ها و مراحل پشت سر گذاشته رو ذخیره کنی و در جدول رده بندی شرکت کنی.</string>
    <string name="buy_bulb_button">خرید چراغ</string>
    <string name="exam_prize">جایزه امتحان این مرحله:</string>
    <string name="help_speed">راهنما بازی سرعتی</string>
    <string name="help_speed_1">• این چالش سرعتی، ۱۰ سوال داره که باید برای هر کدوم با ۴ عددی که بهت میده عدد ۲۴ بسازی.</string>
    <string name="help_speed_2">• زمانی که این ۱۰ تا سوال رو حل می کنی ذخیره میشه و با اون می تونی رکورد بزنی. پس سعی کن سریع حل کنی!</string>
    <string name="help_speed_3">• با هر سوال که درست جواب میدی، سوال بعدی یکم سخت تر میشه.</string>
    <string name="help_speed_4">• تا سه بار می تونی سوال هایی که نمی تونی حل کنی رو عوض کنی. هر بار که بخوای سوال رو عوض کنی یکی از چراغ های روشنت کم میشه.</string>
    <string name="skill_level">میزان مهارت:</string>
    <string name="exam_times_1">این دفعه %1$s ام که داری امتحان این مرحله رو میدی.</string>
    <string name="exam_times_2">تو این امتحان %1$s چراغ روشن جایزه میگیری که بسته به زمان بازی کم میشن!</string>
    <string name="exam_times_3">اگر آماده ای بریم که امتحان رو شروع کنی!</string>
    <string name="start_exam">بریم امتحان بدیم!</string>
    <string name="you_grew">بزرگ شدی!</string>
    <string name="leave_game">خروج از بازی</string>
    <string name="leave_game_desc">با خروج از بازی تمام راه حل ها و رکورد های ذخیره شده برای این سوال از دست می ره. آیا برای خروج از بازی مطمئنی؟</string>
    <string name="leave">برو بیرون!</string>
    <string name="game_help">راهنمای بازی</string>
    <string name="guide_ended">پایان راهنمای بازی</string>
    <string name="guide_ended_desc_1">راهنمای بازی تمام شد. امیدوارم که خوشت اومده باشه و دستت اومده باشه که چطوری میشه ۲۴ ساخت!</string>
    <string name="guide_ended_desc_2">فقط حواست باشه که سرعت عملت باعث میشه ستاره های بیشتری بگیری. اگر هم نتونستی همه ستاره هارو بگیری می تونی دوباره سعی کنی.</string>
    <string name="more">بیشتر</string>
    <string name="remaining_value">فقط %1$s سوال دیگه تا آخر %2$s مونده</string>
    <string name="remaining_first">راهنما رو بازی کن تا با بازی آشنا شی</string>
    <string name="count_stars">%1$s ستاره از مجموع %2$s مرحله گذرانده</string>
    <string name="finish_level">برای پایان این مرحله تو امتحان شرکت کن</string>
    <string name="go_to_exam">امتحان مرحله</string>
    <string name="average">میانگین:</string>
    <string name="only_integer">جواب تقسیم باید عدد صحیح باشد</string>
    <string name="buy_lamp">خرید چراغ روشن</string>
    <string name="buy_lamp_desc">شما پکیج %1$s چراغ روشن رو انتخاب کردین که قیمت آن %2$s می باشد. در صورت اطمینان به صفحه خرید فرستاده خواهید شد.</string>
    <string name="bulb_help">راهنمای چراغ ها</string>
    <string name="bulb_help_1">• چراغ های این بازی برای کمک بهت استفاده میشن. هر جا که دیگه نمی دونستی باید چیکار کنی از چراغ های روشنت استفاده می تونی استفاده کنی.</string>
    <string name="bulb_help_2">• توی بازی با استفاده از چراغ های روشنت می تونی راه حل سوال رو ببینی.</string>
    <string name="bulb_help_3">• آخر هر امتحان مرحله ها بهت چراغ جایزه داده میشه.</string>
    <string name="bulb_help_4">• نگران نباش، هر وقت خواستی می تونی یه عالمه چراغ روشن بخری!</string>
    <string name="solution_title">راهنمای بازی</string>
    <string name="solution_desc">از مرحله بعدی، هر جا احساس کردی که دیگه نمیتونی سوال رو حل کنی، میتونی با چراغ های روشنت راهنمایی برای حل سوال رو ببینی</string>
    <string name="got_it">فهمیدم!</string>
    <string name="dot">•</string>
    <string name="open_par">(</string>
    <string name="close_par">)</string>
    <string name="show_first_guide">برای نمایش اولین راهنمای حل این سوال باید یکی از چراغ های روشنت رو بدی!</string>
    <string name="show_second_guide">اگر می خوای بقیه راه حل سوال رو هم بدونی، کافیه یه چراغ روشن دیگه هم بدی!</string>
    <string name="not_enough_bulb">الان چراغ روشن کافی برای نشون دادن راهنما حل این سوال نداری. اگر خواستی چراغ بخر.</string>
    <string name="game_record_count">تعداد سوالات حل شده:</string>
    <string name="achieved_stars">تعداد کل ستاره ها:</string>
    <string name="star_average">میانگین ستاره های بازی:</string>
    <string name="device_data">اطلاعات بازی در این دستگاه</string>
    <string name="user_profile">پروفایل کاربری</string>
    <string name="edit_desc">برای نمایش نام و آواتار مخصوص خود در جدول رتبه بندی، اطلاعات پروفایل خود را اصلاح کنید.</string>
    <string name="guide_1">عدد ۱ رو انتخاب کن</string>
    <string name="guide_number">عدد %1$s رو انتخاب کن</string>
    <string name="guide_operand">علامت %1$s رو انتخاب کن</string>
    <string name="level_name_1">نوزاد</string>
    <string name="level_name_2">نوباوه</string>
    <string name="level_name_3">کودک</string>
    <string name="level_name_4">دبستانی</string>
    <string name="level_name_5">راهنمایی</string>
    <string name="level_name_6">دبیرستانی</string>
    <string name="level_name_7">دانشجو</string>
    <string name="level_name_8">کاردان</string>
    <string name="level_name_9">کارشناس</string>
    <string name="level_name_10">کارشناس ارشد</string>
    <string name="level_name_11">دکتر</string>
    <string name="level_name_12">فوق دکترا</string>
    <string name="level_name_13">پرفسور</string>
    <string name="level_name_14">دانشمند</string>
    <string name="level_name_15">دکتر حسابی</string>
    <string name="secret_level">مرحله مخفی %1$s</string>
    <string name="intro_text">با هر عددی که می بینی ۲۴ بساز</string>
    <string name="intro_text_2">قدرت محاسبه ذهنت رو قوی کن</string>
    <string name="intro_text_3">سرعت حل مسئله خودت رو بالا ببر</string>
    <string name="enter_name">اسم…</string>
    <string name="high_score">رکورد:</string>
    <string name="login_intro_desc">اگر دوست داری همیشه رکوردت ذخیره بشه و اسمت تو لیست برترین ها نشون داده شه، وارد حساب کاربریت شو:</string>
    <string name="skip">بیخیال</string>
    <string name="new_avatar">آواتار جدید</string>
    <string name="new_avatar_desc">تازه %1$s آواتار جدید به لیست اضافه شده.</string>
    <string name="new_avatar_desc_2">الان می تونی به صفحه اصلاح پروفایل بری و ببینی چی اضافه شده.</string>
    <string name="edit_profile">اصلاح پروفایل</string>
    <string name="advertise">تبلیغات</string>
    <string name="getting_ready">در حال آماده سازی بازی</string>
    <string name="not_entered">[وارد نشده]</string>
    <string name="friends">دوستان</string>
    <string name="followers">آشنایان</string>
    <string name="login">ورود</string>
    <string name="temp_rank">#۲۵</string>
    <string name="add_new_friends">افزودن دوست جدید</string>
    <string name="fact_1">می خوای رکوردت رو بهتر کنی؟</string>
    <string name="fact_2">می دونستی تمرین ریاضی جلوی آلزایمر رو میگیره؟</string>
    <string name="fact_3">حل تمرین های ریاضی تمرکز آدم رو بالا می بره!</string>
    <string name="fact_4">این بازی به بهبود عملکرد ذهن شما کمک می کند!</string>
    <string name="fact_math">نکات جالب ریاضی!</string>
    <string name="new_leader">ریاضیدان برتر شد</string>
    <string name="new_leader_desc">تو هم بازی کن تا ریاضیدان برتر بشی!</string>
    <string name="new_record_leader">رکورد جدید زد</string>
    <string name="new_record_desc">همین الان برو رکوردش رو بزن!</string>
    <string name="enter_mail">برای اینکه دوستت رو اضافه کنی، ایمیلش رو وارد کن:</string>
    <string name="mail_username">ایمیل…</string>
    <string name="empty_mail">ایمیل نمی تواند خالی باشد</string>
    <string name="login_add_desc">اگر می خوای دوستات رو دنبال کنی و رکوردت تو لیست بهترین ها باشه، وارد حساب کاربریت شو:</string>
    <string name="wrong_email">دوستت پیدا نشد!</string>
    <string name="wrong_email_desc">ایمیل یا نام کاربری که وارد کردی پیدا نشد. اگر دوست داری می تونی این بازی رو با دوستت به اشتراک بذاری.</string>
    <string name="share">اشتراک با دوستان</string>
    <string name="share_friends">بازی ما را با دوستان خود به اشتراک بگذارید</string>
    <string name="new_follower">دنبال کننده جدید داری!</string>
    <string name="new_follower_desc">تازه %1$s کاربر جدید تو رو دنبال می کنن.</string>
    <string name="new_follower_desc_2">الان می تونی به صفحه آشنایان بری و ببینی چه کسایی اضافه شدن.</string>
    <string name="no_friends">با اضافه کردن دوستات،</string>
    <string name="no_friends_2">امتیازهاتون رو با هم مقایسه کنین</string>
    <string name="yes">بله</string>
    <string name="validate">تایید</string>
    <string name="cancel">لغو</string>
</resources>