<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/add_new_friends"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="24dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mail"
            android:textSize="@dimen/large_text"
            android:textColor="@color/grayText" />
        <com.gearback.custom.CustomFontEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:id="@+id/mailValue"
            android:layout_marginTop="8dp"
            android:textColor="@color/darkText"
            android:textColorHint="@color/grayText"
            android:hint="@string/mail_username"/>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_mail"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_text"
            android:id="@+id/emptyValue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:text="@string/validate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="48dp"
            android:id="@+id/setDialogBtn"
            android:textSize="@dimen/xlarge_text"
            android:gravity="center"
            android:textColor="@color/links"
            android:background="@color/transparent" />
        <com.gearback.custom.CustomFontTextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:minWidth="48dp"
            android:id="@+id/closeDialogBtn"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textColor="@color/grayText"
            android:background="@color/transparent" />
    </LinearLayout>
</LinearLayout>