<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/new_avatar"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="24dp">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newAvatarText"
            android:text="@string/new_avatar_desc"
            android:textSize="@dimen/large_text"
            android:textColor="@color/grayText" />
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_avatar_desc_2"
            android:textSize="@dimen/large_text"
            android:textColor="@color/grayText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/avatarHolder"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="48dp"
            android:id="@+id/setDialogBtn"
            android:textSize="@dimen/xlarge_text"
            android:gravity="center"
            android:textColor="@color/links"
            android:background="@color/transparent" />
        <com.gearback.custom.CustomFontTextView
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:minWidth="48dp"
            android:id="@+id/closeDialogBtn"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textColor="@color/grayText"
            android:background="@color/transparent" />
    </LinearLayout>
</LinearLayout>