<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <com.gearback.custom.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:text="@string/edit_profile"
        android:textColor="@color/darkText"
        android:textSize="@dimen/xxlarge_text"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="24dp">
        <com.gearback.custom.CustomFontEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="45"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:gravity="right"
            android:id="@+id/nameValue"
            android:hint="@string/enter_name"
            android:textSize="@dimen/large_text"
            android:textColor="@color/darkText"
            android:textColorHint="@color/grayText" />
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle_green_border"/>
            <com.gearback.custom.CircleImage
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selectedImage"
                android:layout_margin="3dp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_0"/>
            <com.gearback.custom.CircleImage
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:adjustViewBounds="true"
                android:src="@drawable/m0"/>
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/itemList" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp">
        <com.gearback.custom.CustomFontTextView
            android:text="@string/validate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="48dp"
            android:id="@+id/setDialogBtn"
            android:textSize="@dimen/xlarge_text"
            android:gravity="center"
            android:textColor="@color/links"
            android:background="@color/transparent" />
        <com.gearback.custom.CustomFontTextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:minWidth="48dp"
            android:id="@+id/closeDialogBtn"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:textColor="@color/grayText"
            android:background="@color/transparent" />
    </LinearLayout>
</LinearLayout>