<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="right">
        <com.gearback.custom.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/leaderBoardTitle"
            android:textSize="@dimen/large_text"
            android:textColor="@color/links" />
        <com.gearback.custom.MaterialIconTextView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/backBtn"
            android:text="@string/backIcon"
            android:textColor="@color/darkText"
            android:gravity="center"
            android:textSize="@dimen/normal_icon_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rankHolder"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rank2Holder"
            android:orientation="vertical"
            android:gravity="center">
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank_2"
                android:textSize="@dimen/normal_icon_size"
                android:textColor="@color/darkText" />
            <RelativeLayout
                android:layout_width="72dp"
                android:layout_height="72dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:id="@+id/rank2ImageBackground"
                    android:background="@drawable/image_background"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rank2Image"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/image_0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/m0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/rank_2"/>
            </RelativeLayout>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/darkText"
                android:id="@+id/rank2Name" />
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:gravity="right"
                android:id="@+id/rank2Score"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/green" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rank1Holder"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:gravity="center">
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank_1"
                android:textSize="@dimen/normal_icon_size"
                android:textColor="@color/darkText" />
            <RelativeLayout
                android:layout_width="88dp"
                android:layout_height="88dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:id="@+id/rank1ImageBackground"
                    android:background="@drawable/image_background"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rank1Image"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/image_0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/m0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/rank_1"/>
            </RelativeLayout>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/darkText"
                android:id="@+id/rank1Name" />
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:gravity="right"
                android:id="@+id/rank1Score"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/green" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rank3Holder"
            android:orientation="vertical"
            android:gravity="center">
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank_3"
                android:textSize="@dimen/normal_icon_size"
                android:textColor="@color/darkText" />
            <RelativeLayout
                android:layout_width="72dp"
                android:layout_height="72dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:id="@+id/rank3ImageBackground"
                    android:background="@drawable/image_background"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rank3Image"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/image_0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/m0"/>
                <com.gearback.custom.CircleImage
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/rank_3"/>
            </RelativeLayout>
            <com.gearback.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/darkText"
                android:id="@+id/rank3Name" />
            <com.gearback.custom.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:gravity="right"
                android:id="@+id/rank3Score"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">
        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/swipeRefreshLayout">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/leaderBoardList"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <com.gearback.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/grayText"
            android:text="@string/no_leader_board"
            android:id="@+id/noLeaderBoards"/>
    </RelativeLayout>
    <com.webmarketer.publisher.Advertise
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:type="leaderboard"
        app:borderWidth="1dp"
        app:borderColor="@color/darkText"
        android:id="@+id/adHolder"/>
</LinearLayout>